unpackaged/main/default/objects/GSR_Installation_Fault__c/GSR_Installation_Fault__c.object-meta.xml
<CustomObject>
    <label>GSR Installation Fault</label>
    <nameField>
        <displayFormat>GSR IF-{00000}</displayFormat>
        <label>GSR Installation Fault</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSR Installation Faults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>