unpackaged/main/default/objects/GSR_Installation_Fault__c/fields/Give_details_of_any_faults__c.field-meta.xml
<CustomField>
    <fullName>Give_details_of_any_faults__c</fullName>
    <label>Give details of any faults</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>