unpackaged/main/default/objects/GSR_Installation_Fault__c/fields/GSR_Submission__c.field-meta.xml
<CustomField>
    <fullName>GSR_Submission__c</fullName>
    <label>GSR Submission</label>
    <referenceTo>GSR_Submission__c</referenceTo>
    <relationshipLabel>GSR Installation Faults</relationshipLabel>
    <relationshipName>GSR_Installation_Faults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>