unpackaged/main/default/objects/GSR_Installation_Fault__c/fields/Rectification_work_carried_out__c.field-meta.xml
<CustomField>
    <fullName>Rectification_work_carried_out__c</fullName>
    <label>Rectification work carried out</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>