unpackaged/main/default/objects/GSR_Installation_Fault__c/fields/Warning_tag_or_sticker_fixed__c.field-meta.xml
<CustomField>
    <fullName>Warning_tag_or_sticker_fixed__c</fullName>
    <label>Warning tag or sticker fixed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>